--- a/templateindex.html
+++ b/templateindex.html
@@ -6,8 +6,10 @@
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="fonts/fontcss.css" />
+    <script src="js/code.js"></script>
   </head>
   <body>
-    {typebody}
+    {header}
+    <div id="lineup">{typebody}</div>
   </body>
 </html>
