--- a/templateindex.html
+++ b/templateindex.html
@@ -6,10 +6,8 @@
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="fonts/fontcss.css" />
-    <script src="js/code.js"></script>
   </head>
   <body>
-    {header}
-    <div id="lineup">{typebody}</div>
+    {typebody}
   </body>
 </html>
