--- a/templateindex.html
+++ b/templateindex.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fontcss.css" />
   </head>
   <body>
-    {typebody}
+    {header}
+    <div id="lineup">{typebody}</div>
   </body>
 </html>
