--- a/site/index.html
+++ b/site/index.html
@@ -8,36 +8,40 @@
     <link rel="stylesheet" href="css/fontcss.css" />
   </head>
   <body>
-    <p contenteditable="true" class="Pan-FarhillDouble01">OHamburgefonstiv</p>
+    <div id="header">
+  <p>HalloType unfinished type projects</p>
+</div>
 
-    <p contenteditable="true" class="Marty-Duo_colr">OHamburgefonstiv</p>
+    <div id="lineup">
+<p contenteditable="true" class="Pan-FarhillDouble01">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Sketch-Fine">OHamburgefonstiv</p>
+<p contenteditable="true" class="Marty-Duo_colr">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Mier-Bol">OHamburgefonstiv</p>
+<p contenteditable="true" class="Sketch-Fine">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="bit6502">OHamburgefonstiv</p>
+<p contenteditable="true" class="Mier-Bol">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
+<p contenteditable="true" class="bit6502">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Snel">OHamburgefonstiv</p>
+<p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="WayneRound">OHamburgefonstiv</p>
+<p contenteditable="true" class="Snel">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Niccolo-Test_normalized">
-      OHamburgefonstiv
-    </p>
+<p contenteditable="true" class="WayneRound">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="somename">OHamburgefonstiv</p>
+<p contenteditable="true" class="Niccolo-Test_normalized">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Two2_sbix">OHamburgefonstiv</p>
+<p contenteditable="true" class="somename">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Pan-Taper_one">OHamburgefonstiv</p>
+<p contenteditable="true" class="Two2_sbix">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="spider">OHamburgefonstiv</p>
+<p contenteditable="true" class="Pan-Taper_one">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Marty-Heavy">OHamburgefonstiv</p>
+<p contenteditable="true" class="spider">OHamburgefonstiv</p>
 
-    <p contenteditable="true" class="Contrast">OHamburgefonstiv</p>
+<p contenteditable="true" class="Marty-Heavy">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="Contrast">OHamburgefonstiv</p>
+</div>
   </body>
 </html>
