--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,8 @@
 
 <p contenteditable="true" class="spider">OHamburgefonstiv</p>
 
+<p contenteditable="true" class="pixels-smal">OHamburgefonstiv</p>
+
 <p contenteditable="true" class="Marty-Heavy">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="Contrast">OHamburgefonstiv</p>
