--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/fontcss.css" />
+    <link rel="stylesheet" href="css/Pan-FarhillDouble01.css" />
+<link rel="stylesheet" href="css/Marty-Duo_colr.css" />
+<link rel="stylesheet" href="css/Sketch-Fine.css" />
+<link rel="stylesheet" href="css/Mier-Bol.css" />
+<link rel="stylesheet" href="css/bit6502.css" />
+<link rel="stylesheet" href="css/Cheese_color_colr.css" />
+<link rel="stylesheet" href="css/Snel.css" />
+<link rel="stylesheet" href="css/WayneRound.css" />
+<link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
+<link rel="stylesheet" href="css/somename.css" />
+<link rel="stylesheet" href="css/Two2_sbix.css" />
+<link rel="stylesheet" href="css/Pan-Taper_one.css" />
+<link rel="stylesheet" href="css/spider.css" />
+<link rel="stylesheet" href="css/pixels-smal.css" />
+<link rel="stylesheet" href="css/Marty-Heavy.css" />
+<link rel="stylesheet" href="css/Contrast.css" />
+
   </head>
   <body>
     <div id="header">
