--- a/templateindex.html
+++ b/templateindex.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/fontcss.css" />
+    {fontcsses}
   </head>
   <body>
     {header}
