--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="css/Sketch-Fine.css" />
 <link rel="stylesheet" href="css/Mier-Bol.css" />
 <link rel="stylesheet" href="css/bit6502.css" />
+<link rel="stylesheet" href="css/MagazinePrint.css" />
 <link rel="stylesheet" href="css/Cheese_color_colr.css" />
 <link rel="stylesheet" href="css/Snel.css" />
 <link rel="stylesheet" href="css/WayneRound.css" />
@@ -38,6 +39,8 @@
 <p contenteditable="true" class="Mier-Bol">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="bit6502">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="MagazinePrint">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
 
