working sliders, issue with multi slider

--- a/index.html
+++ b/index.html
@@ -6,103 +6,70 @@
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/Pan-FarhillDouble01.css" />
-    <link rel="stylesheet" href="css/Marty-Duo_colr.css" />
-    <link rel="stylesheet" href="css/Sketch-Fine.css" />
-    <link rel="stylesheet" href="css/Mier-Bol.css" />
-    <link rel="stylesheet" href="css/bit6502.css" />
-    <link rel="stylesheet" href="css/MagazinePrint.css" />
-    <link rel="stylesheet" href="css/Pan.css" />
-    <link rel="stylesheet" href="css/bex.css" />
-    <link rel="stylesheet" href="css/Cheese_color_colr.css" />
-    <link rel="stylesheet" href="css/Snel.css" />
-    <link rel="stylesheet" href="css/WayneRound.css" />
-    <link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
-    <link rel="stylesheet" href="css/somename.css" />
-    <link rel="stylesheet" href="css/TheStencilVar.css" />
-    <link rel="stylesheet" href="css/Pan-Taper_one.css" />
-    <link rel="stylesheet" href="css/spider.css" />
-    <link rel="stylesheet" href="css/pixels-smal.css" />
-    <link rel="stylesheet" href="css/Marty-Heavy.css" />
-    <link rel="stylesheet" href="css/Contrast.css" />
+<link rel="stylesheet" href="css/Marty-Duo_colr.css" />
+<link rel="stylesheet" href="css/Sketch-Fine.css" />
+<link rel="stylesheet" href="css/Mier-Bol.css" />
+<link rel="stylesheet" href="css/bit6502.css" />
+<link rel="stylesheet" href="css/MagazinePrint.css" />
+<link rel="stylesheet" href="css/Pan.css" />
+<link rel="stylesheet" href="css/bex.css" />
+<link rel="stylesheet" href="css/Cheese_color_colr.css" />
+<link rel="stylesheet" href="css/Snel.css" />
+<link rel="stylesheet" href="css/WayneRound.css" />
+<link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
+<link rel="stylesheet" href="css/somename.css" />
+<link rel="stylesheet" href="css/TheStencilVar.css" />
+<link rel="stylesheet" href="css/Pan-Taper_one.css" />
+<link rel="stylesheet" href="css/spider.css" />
+<link rel="stylesheet" href="css/pixels-smal.css" />
+<link rel="stylesheet" href="css/Marty-Heavy.css" />
+<link rel="stylesheet" href="css/Contrast.css" />
+
   </head>
   <body>
     <div id="header">
-      <p>HalloType unfinished type projects</p>
-    </div>
+  <p>HalloType unfinished type projects</p>
+</div>
 
     <div id="lineup">
-      <p contenteditable="true" class="Pan-FarhillDouble01">OHamburgefonstiv</p>
+<p contenteditable="true" class="Pan-FarhillDouble01">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Marty-Duo_colr">OHamburgefonstiv</p>
+<p contenteditable="true" class="Marty-Duo_colr">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Sketch-Fine">OHamburgefonstiv</p>
+<p contenteditable="true" class="Sketch-Fine">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Mier-Bol">OHamburgefonstiv</p>
+<p contenteditable="true" class="Mier-Bol">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="bit6502">OHamburgefonstiv</p>
+<p contenteditable="true" class="bit6502">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="MagazinePrint">OHamburgefonstiv</p>
+<p contenteditable="true" class="MagazinePrint">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Pan capsonly">OHamburgefonstiv</p>
-      <input
-        type="range"
-        class="ax"
-        min="0.0"
-        max="30.0"
-        value="20.0"
-      />wght<input
-        type="range"
-        class="ax"
-        min="0.0"
-        max="360.0"
-        value="180.0"
-      />ANGL<input
-        type="range"
-        class="ax"
-        min="10.0"
-        max="60.0"
-        value="20.0"
-      />STEP
-      <div class="clear"></div>
-      <p contenteditable="true" class="bex">OHamburgefonstiv</p>
-      <input type="range" class="ax" min="0.0" max="1000.0" value="0.0" />wght
-      <div class="clear"></div>
-      <p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
+<p contenteditable="true" class="Pan">OHamburgefonstiv</p>
+<input type='range' class='ax' min='0.0' max='30.0' value='20.0' id=Panwght>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id=PanANGL>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id=PanSTEP>STEP <div class='clear'></div>
+<p contenteditable="true" class="bex">OHamburgefonstiv</p>
+<input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=bexwght>wght <div class='clear'></div>
+<p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Snel">OHamburgefonstiv</p>
+<p contenteditable="true" class="Snel">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="WayneRound">OHamburgefonstiv</p>
+<p contenteditable="true" class="WayneRound">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Niccolo-Test_normalized">
-        OHamburgefonstiv
-      </p>
+<p contenteditable="true" class="Niccolo-Test_normalized">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="somename">OHamburgefonstiv</p>
+<p contenteditable="true" class="somename">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="TheStencilVar">OHamburgefonstiv</p>
-      <input
-        type="range"
-        class="ax"
-        min="0.0"
-        max="1000.0"
-        value="0.0"
-      />wght<input
-        type="range"
-        class="ax"
-        min="10.0"
-        max="100.0"
-        value="10.0"
-      />BRDG
-      <div class="clear"></div>
-      <p contenteditable="true" class="Pan-Taper_one">OHamburgefonstiv</p>
+<p contenteditable="true" class="TheStencilVar">OHamburgefonstiv</p>
+<input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=TheStencilVarwght>wght <input type='range' class='ax' min='10.0' max='100.0' value='10.0' id=TheStencilVarBRDG>BRDG <div class='clear'></div>
+<p contenteditable="true" class="Pan-Taper_one">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="spider">OHamburgefonstiv</p>
+<p contenteditable="true" class="spider">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="pixels-smal">OHamburgefonstiv</p>
+<p contenteditable="true" class="pixels-smal">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Marty-Heavy">OHamburgefonstiv</p>
+<p contenteditable="true" class="Marty-Heavy">OHamburgefonstiv</p>
 
-      <p contenteditable="true" class="Contrast">OHamburgefonstiv</p>
-    </div>
+<p contenteditable="true" class="Contrast">OHamburgefonstiv</p>
+</div>
   </body>
+  <script src="js/script.js"></script>
 </html>
