mono-case font support

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="lineup">
 <p contenteditable="true" class="Pan-FarhillDouble01">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Marty-Duo_colr">OHamburgefonstiv</p>
+<p contenteditable="true" class="Marty-Duo_colr noLowercase">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="Sketch-Fine">OHamburgefonstiv</p>
 
@@ -43,13 +43,13 @@
 
 <p contenteditable="true" class="MagazinePrint">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Pan">OHamburgefonstiv</p>
+<p contenteditable="true" class="Pan noLowercase">OHamburgefonstiv</p>
 <input type='range' class='ax' min='0.0' max='30.0' value='20.0' id=Panwght>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id=PanANGL>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id=PanSTEP>STEP <div class='clear'></div>
 <p contenteditable="true" class="bex">OHamburgefonstiv</p>
 <input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=bexwght>wght <div class='clear'></div>
 <p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Snel">OHamburgefonstiv</p>
+<p contenteditable="true" class="Snel noLowercase">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="WayneRound">OHamburgefonstiv</p>
 
@@ -59,7 +59,7 @@
 
 <p contenteditable="true" class="Pan-Taper_one">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="spider">OHamburgefonstiv</p>
+<p contenteditable="true" class="spider noLowercase">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="pixels-smal">OHamburgefonstiv</p>
 
