--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 <p contenteditable="true" class="MagazinePrint">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="Pan noLowercase">OHamburgefonstiv</p>
-<input type='range' class='ax' min='0.0' max='30.0' value='20.0' id=Panwght>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id=PanANGL>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id=PanSTEP>STEP <div class='clear'></div>
+<div id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id=Panwght>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id=PanANGL>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id=PanSTEP>STEP </div>
 <p contenteditable="true" class="bex">OHamburgefonstiv</p>
-<input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=bexwght>wght <div class='clear'></div>
+<div id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=bexwght>wght </div>
 <p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="Snel noLowercase">OHamburgefonstiv</p>
