--- a/header.html
+++ b/header.html
@@ -1,3 +1,14 @@
-<div id="header">
-  <p>HalloType unfinished type projects</p>
+<div id="left">
+  <div id="header">
+    <p>HalloType unfinished type projects</p>
+  </div>
+
+  <div id="views">
+    <form>
+      <input type="radio" id="line" name="view" value="line" />
+      <label for="line">line</label><br />
+      <input type="radio" id="grid" name="view" value="grid" />
+      <label for="grid">grid</label><br />
+    </form>
+  </div>
 </div>
