--- a/index.html
+++ b/index.html
@@ -26,47 +26,95 @@
 
   </head>
   <body>
-    <div id="header">
-  <p>HalloType unfinished type projects</p>
+    <div id="left">
+  <div id="header">
+    <p>HalloType unfinished type projects</p>
+  </div>
+
+  <div id="views">
+    <form>
+      <input type="radio" id="line" name="view" value="line" />
+      <label for="line">line</label><br />
+      <input type="radio" id="grid" name="view" value="grid" />
+      <label for="grid">grid</label><br />
+    </form>
+  </div>
 </div>
 
-    <div id="lineup">
-<p contenteditable="true" class="Pan-FarhillDouble01">OHamburgefonstiv</p>
+    <div id="thefonts"><div class='fontItem lineView Pan-FarhillDouble01'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Marty-Duo_colr noLowercase">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Marty-Duo_colr noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Sketch-Fine">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Sketch-Fine'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Mier-Bol">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Mier-Bol'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="bit6502">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView bit6502'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="MagazinePrint">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView MagazinePrint'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Pan noLowercase">OHamburgefonstiv</p>
-<div id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id=Panwght>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id=PanANGL>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id=PanSTEP>STEP </div>
-<p contenteditable="true" class="bex">OHamburgefonstiv</p>
-<div id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=bexwght>wght </div>
-<p contenteditable="true" class="Cheese_color_colr">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Pan noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Snel noLowercase">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id=Panwght>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id=PanANGL>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id=PanSTEP>STEP </div></div><div class='fontItem lineView bex'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="WayneRound">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id=bexwght>wght </div></div><div class='fontItem lineView Cheese_color_colr'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Niccolo-Test_normalized">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Snel noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="somename">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView WayneRound'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Pan-Taper_one">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Niccolo-Test_normalized'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="spider noLowercase">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView somename'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="pixels-smal">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Pan-Taper_one'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Marty-Heavy">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView spider noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-<p contenteditable="true" class="Contrast">OHamburgefonstiv</p>
-</div>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView pixels-smal'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Marty-Heavy'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Contrast'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+</div></div>
   </body>
-  <script src="js/script.js"></script>
+  <script src="js/varSupport.js"></script>
+  <script src="js/views.js"></script>
 </html>
