--- a/templateindex.html
+++ b/templateindex.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     {header}
-    <div id="lineup">{typebody}</div>
+    <div id="thefonts">{thefonts}</div>
   </body>
-  <script src="js/script.js"></script>
+  <script src="js/varSupport.js"></script>
+  <script src="js/views.js"></script>
 </html>
