--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
 <link rel="stylesheet" href="css/somename.css" />
 <link rel="stylesheet" href="css/Pan-Taper_one.css" />
+<link rel="stylesheet" href="css/Hershey-MixFill.css" />
 <link rel="stylesheet" href="css/spider.css" />
 <link rel="stylesheet" href="css/pixels-smal.css" />
 <link rel="stylesheet" href="css/Marty-Heavy.css" />
@@ -94,6 +95,10 @@
 
 <p contenteditable="true" class="gridView invisible">A</p>
 </div><div class='fontItem lineView Pan-Taper_one'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Hershey-MixFill'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
