--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="css/WayneRound.css" />
 <link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
 <link rel="stylesheet" href="css/somename.css" />
+<link rel="stylesheet" href="css/Magnetik.css" />
 <link rel="stylesheet" href="css/Pan-Taper_one.css" />
 <link rel="stylesheet" href="css/Hershey-MixFill.css" />
 <link rel="stylesheet" href="css/spider.css" />
@@ -91,6 +92,10 @@
 
 <p contenteditable="true" class="gridView invisible">A</p>
 </div><div class='fontItem lineView somename'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Magnetik noLowercase'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
