test ital axis2

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <p contenteditable="true" class="gridView invisible">A</p>
       </div>
       <div class="fontItem lineView BexTilt">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+        <p contenteditable="true" class="lineView">springlocks</p>
 
         <p contenteditable="true" class="gridView invisible">p</p>
         <div class="varSup" id="sliders-BexTilt">
