added preferredWords feature

--- a/index.html
+++ b/index.html
@@ -6,196 +6,129 @@
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/Pan-FarhillDouble01.css" />
-    <link rel="stylesheet" href="css/Marty-Duo_colr.css" />
-    <link rel="stylesheet" href="css/Sketch-Fine.css" />
-    <link rel="stylesheet" href="css/Mier-Bol.css" />
-    <link rel="stylesheet" href="css/bit6502.css" />
-    <link rel="stylesheet" href="css/MagazinePrint.css" />
-    <link rel="stylesheet" href="css/Pan.css" />
-    <link rel="stylesheet" href="css/bex.css" />
-    <link rel="stylesheet" href="css/Cheese_color_colr.css" />
-    <link rel="stylesheet" href="css/Snel.css" />
-    <link rel="stylesheet" href="css/WayneRound.css" />
-    <link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
-    <link rel="stylesheet" href="css/somename.css" />
-    <link rel="stylesheet" href="css/Magnetik.css" />
-    <link rel="stylesheet" href="css/Pan-Taper_one.css" />
-    <link rel="stylesheet" href="css/Hershey-MixFill.css" />
-    <link rel="stylesheet" href="css/spider.css" />
-    <link rel="stylesheet" href="css/pixels-smal.css" />
-    <link rel="stylesheet" href="css/Marty-Heavy.css" />
-    <link rel="stylesheet" href="css/BexTilt.css" />
-    <link rel="stylesheet" href="css/Contrast.css" />
+<link rel="stylesheet" href="css/Marty-Duo_colr.css" />
+<link rel="stylesheet" href="css/Sketch-Fine.css" />
+<link rel="stylesheet" href="css/Mier-Bol.css" />
+<link rel="stylesheet" href="css/bit6502.css" />
+<link rel="stylesheet" href="css/MagazinePrint.css" />
+<link rel="stylesheet" href="css/Pan.css" />
+<link rel="stylesheet" href="css/bex.css" />
+<link rel="stylesheet" href="css/Cheese_color_colr.css" />
+<link rel="stylesheet" href="css/Snel.css" />
+<link rel="stylesheet" href="css/WayneRound.css" />
+<link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
+<link rel="stylesheet" href="css/somename.css" />
+<link rel="stylesheet" href="css/Magnetik.css" />
+<link rel="stylesheet" href="css/Pan-Taper_one.css" />
+<link rel="stylesheet" href="css/Hershey-MixFill.css" />
+<link rel="stylesheet" href="css/spider.css" />
+<link rel="stylesheet" href="css/pixels-smal.css" />
+<link rel="stylesheet" href="css/Marty-Heavy.css" />
+<link rel="stylesheet" href="css/BexTilt.css" />
+<link rel="stylesheet" href="css/Contrast.css" />
+
   </head>
   <body>
     <div id="left">
-      <div id="header">
-        <p>HalloType unfinished type projects</p>
-      </div>
+  <div id="header">
+    <p>HalloType unfinished type projects</p>
+  </div>
 
-      <div id="views">
-        <form>
-          <input type="radio" id="line" name="view" value="line" />
-          <label for="line">line</label><br />
-          <input type="radio" id="grid" name="view" value="grid" />
-          <label for="grid">grid</label><br />
-        </form>
-      </div>
-    </div>
+  <div id="views">
+    <form>
+      <input type="radio" id="line" name="view" value="line" />
+      <label for="line">line</label><br />
+      <input type="radio" id="grid" name="view" value="grid" />
+      <label for="grid">grid</label><br />
+    </form>
+  </div>
+</div>
 
-    <div id="thefonts">
-      <div class="fontItem lineView Pan-FarhillDouble01">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+    <div id="thefonts"><div class='fontItem lineView Pan-FarhillDouble01'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Marty-Duo_colr noLowercase">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Marty-Duo_colr noLowercase'>
+<p contenteditable="true" class="lineView">gunslinger and other songs</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Sketch-Fine">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Sketch-Fine'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Mier-Bol">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Mier-Bol'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView bit6502">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView bit6502'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView MagazinePrint">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView MagazinePrint'>
+<p contenteditable="true" class="lineView">Printed Magazine</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Pan noLowercase">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">R</p>
+</div><div class='fontItem lineView Pan noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-        <div class="varSup" id="sliders-Pan">
-          <input
-            type="range"
-            class="ax"
-            min="0.0"
-            max="30.0"
-            value="20.0"
-            id="Panwght"
-          />wght
-          <input
-            type="range"
-            class="ax"
-            min="0.0"
-            max="360.0"
-            value="180.0"
-            id="PanANGL"
-          />ANGL
-          <input
-            type="range"
-            class="ax"
-            min="10.0"
-            max="60.0"
-            value="20.0"
-            id="PanSTEP"
-          />STEP
-        </div>
-      </div>
-      <div class="fontItem lineView bex">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id='Panwght'>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id='PanANGL'>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id='PanSTEP'>STEP </div></div><div class='fontItem lineView bex'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-        <div class="varSup" id="sliders-bex">
-          <input
-            type="range"
-            class="ax"
-            min="0.0"
-            max="1000.0"
-            value="0.0"
-            id="bexwght"
-          />wght
-        </div>
-      </div>
-      <div class="fontItem lineView Cheese_color_colr">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' id='sliders-bex'><input type='range' class='ax' min='0.0' max='1000.0' value='0.0' id='bexwght'>wght </div></div><div class='fontItem lineView Cheese_color_colr'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Snel noLowercase">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Snel noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView WayneRound">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView WayneRound'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Niccolo-Test_normalized">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Niccolo-Test_normalized'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView somename">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView somename'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Magnetik noLowercase">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Magnetik noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Pan-Taper_one">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Pan-Taper_one'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Hershey-MixFill">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Hershey-MixFill'>
+<p contenteditable="true" class="lineView">Alan Hershey</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView spider noLowercase">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView spider noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView pixels-smal">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView pixels-smal'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView Marty-Heavy">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView Marty-Heavy'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-      <div class="fontItem lineView BexTilt">
-        <p contenteditable="true" class="lineView">springlocks</p>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView BexTilt noLowercasenoUppercase'>
+<p contenteditable="true" class="lineView">springlocks</p>
 
-        <p contenteditable="true" class="gridView invisible">p</p>
-        <div class="varSup" id="sliders-BexTilt">
-          <input
-            type="range"
-            class="ax"
-            min="0.0"
-            max="10.0"
-            value="0.0"
-            id="BexTiltital"
-          />ital
-        </div>
-      </div>
-      <div class="fontItem lineView Contrast">
-        <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+<p contenteditable="true" class="gridView invisible">p</p>
+<div class='varSup' id='sliders-BexTilt'><input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='BexTiltital'>ital </div></div><div class='fontItem lineView Contrast'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
-        <p contenteditable="true" class="gridView invisible">A</p>
-      </div>
-    </div>
+<p contenteditable="true" class="gridView invisible">A</p>
+</div></div>
   </body>
   <script src="js/varSupport.js"></script>
   <script src="js/views.js"></script>
