--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="css/bit6502.css" />
 <link rel="stylesheet" href="css/MagazinePrint.css" />
 <link rel="stylesheet" href="css/Pan.css" />
+<link rel="stylesheet" href="css/tree.css" />
 <link rel="stylesheet" href="css/bex.css" />
 <link rel="stylesheet" href="css/Cheese_color_colr.css" />
 <link rel="stylesheet" href="css/Snel.css" />
@@ -72,7 +73,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-<div class='varSup' id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id='Panwght'>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id='PanANGL'>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id='PanSTEP'>STEP </div></div><div class='fontItem lineView bex'>
+<div class='varSup' id='sliders-Pan'><input type='range' class='ax' min='0.0' max='30.0' value='20.0' id='Panwght'>wght <input type='range' class='ax' min='0.0' max='360.0' value='180.0' id='PanANGL'>ANGL <input type='range' class='ax' min='10.0' max='60.0' value='20.0' id='PanSTEP'>STEP </div></div><div class='fontItem lineView tree'>
+<p contenteditable="true" class="lineView">SPACE</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+</div><div class='fontItem lineView bex'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
