--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="css/Pan-Taper_one.css" />
 <link rel="stylesheet" href="css/Hershey-MixFill.css" />
 <link rel="stylesheet" href="css/spider.css" />
+<link rel="stylesheet" href="css/waave.css" />
 <link rel="stylesheet" href="css/pixels-smal.css" />
 <link rel="stylesheet" href="css/Marty-Heavy.css" />
 <link rel="stylesheet" href="css/BexTilt.css" />
@@ -117,7 +118,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-</div><div class='fontItem lineView pixels-smal'>
+</div><div class='fontItem lineView waave noLowercase'>
+<p contenteditable="true" class="lineView">Hamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' id='sliders-waave'><input type='range' class='ax' min='100.0' max='700.0' value='400.0' id='waaveLMBD'>LMBD <input type='range' class='ax' min='0.0' max='40.0' value='40.0' id='waaveAMPL'>AMPL <input type='range' class='ax' min='0.0' max='10.0' value='0.0' id='waaveSHFT'>SHFT </div></div><div class='fontItem lineView pixels-smal'>
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
