--- a/header.html
+++ b/header.html
@@ -1,14 +1,25 @@
-<div id="left">
-  <div id="header">
-    <p>HalloType unfinished type projects</p>
-  </div>
+<div id="tagline">
+	<p> 
+		<br>&gt; <b><a href="#">HalloType</a></b> = Thom Janssen = font maker, type engineer, programmer, creative coder <a href="./type/fonts.html"><span class="typelink"> > typefaces&nbsp;&nbsp;&nbsp;</span></a>
 
-  <div id="views">
-    <form>
-      <input type="radio" id="line" name="view" value="line" />
-      <label for="line">line</label><br />
-      <input type="radio" id="grid" name="view" value="grid" />
-      <label for="grid">grid</label><br />
-    </form>
-  </div>
+	</p>
+
+
 </div>
+
+
+<div id="gohere">
+	↑↑↑
+	<br/>
+	go here!
+</div>
+
+<div id="construction">
+	<br/>
+&nbsp;← still<br/>
+&nbsp;← under<br/>
+&nbsp;↙︎ construction<br/>
+&nbsp;↙︎
+
+</div>
+
